fix(pro-card): add procard collapse demo and doc

--- a/packages/card/src/style/index.less
+++ b/packages/card/src/style/index.less
@@ -78,7 +78,6 @@
     display: block;
     padding: @padding-md;
     box-sizing: border-box;
-    transition: height @animation-duration-slow @ease-out;
     overflow: hidden;
 
     &-center {
@@ -88,7 +87,7 @@
     }
 
     &-collapse {
-      height: 0;
+      display: none;
     }
   }
 
